1998-11-02  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (LIBTOOL_M4): no longer defined
	(LIBTOOL_M4_MACRO_DIR): defined assuming CWD is top_srcdir
	* Makefile.am (ACLOCAL_M4_FROM_SRCDIR): relative to srcdir
	(ACLOCAL_M4): defined and created using ACLOCAL_M4_FROM_SRCDIR
	Reported by Thomas Hepper <Thomas.Hepper@icem.de>

1998-10-31  Michael Schmitz <mschmitz@iname.com>

	* configure.in: let configure check whether strcasecmp is
 	present
	* common-src/strcasecmp.c: new file which contains a definition
	of strcasecmp
	* common-src/amanda.h: added code to declare strcasecmp in
 	case it's not declared in a standard header

1998-10-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (snprintf): arrange that it is included in the
	distribution automatically
	* common-src/Makefile.am (EXTRA_DIST): removed, not needed

	* configure.in (NO_SCSI_CHANGER_MODE): chg-scsi does not support the
	new FreeBSD 3.0 chio.h, so disable it if camlib.h is found.
	* docs/SYSTEM.NOTES (FreeBSD 3.0): add a note about this
	(SunOS 4.x): libtool will no longer find incorrect library versions

1998-10-30  John R. Jackson  <jrj@purdue.edu>

	* common-src/security.c (bsd_security_ok): change error message to
	reflect that it is a host name we were looking up rather than an
	address (also makes the two similar messages unique).

1998-10-28  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SYSTEM.NOTES: Debian 2's dump uses /var/lib/dumpdates 

1998-10-28  John R. Jackson  <jrj@purdue.edu>

	* configure.in: use "df /" instead of just "df" when trying to find
	the device that has the root file system to avoid things like NFS
	hangs that df sometimes suffers from.

1998-10-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheckdb.sh.in: modify to match new tapelist file
	format (keyword reuse and no-reuse). Probably no-one use this
	program.

1998-10-23  John R. Jackson  <jrj@purdue.edu>
