@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: driver.c,v 1.46.2.5 1998/09/03 20:14:08 martinea Exp $
+ * $Id: driver.c,v 1.46.2.6 1998/11/02 21:48:09 jrj Exp $
  *
  * controlling process for the Amanda backup system
  */
@@ -51,6 +51,7 @@ int pending_aborts, inside_dump_to_tape;
 int verbose;
 int force_parameters, use_lffo;
 disk_t *taper_disk;
+unsigned long total_disksize;
 
 int driver_main P((int argc, char **argv));
 int client_constrained P((disk_t *dp));
@@ -190,6 +191,7 @@ char **main_argv;
 	    reserve = 100;
 	}
 
+	total_disksize = 0;
 	for(hdp = holdingdisks, dsk = 0; hdp != NULL; hdp = hdp->next, dsk++) {
 	    struct stat stat_hdp;
 	    hdp->up = (void *)alloc(sizeof(holdalloc_t));
@@ -248,10 +250,11 @@ char **main_argv;
 			    newdir);
 		}
 	    }
+	    total_disksize += hdp->disksize;
 	}
     }
 
-    reserved_space = free_space() / 100 * reserve;
+    reserved_space = total_disksize * (reserve / 100.0);
 
     printf("reserving %ld out of %ld for degraded-mode dumps\n",
 		reserved_space, free_space());
@@ -566,11 +569,13 @@ disklist_t *queuep;
 {
     disk_t *dp;
     disklist_t newq;
+    unsigned long est_full_size;
 
     newq.head = newq.tail = 0;
 
     dump_schedule(queuep, "before start degraded mode");
 
+    est_full_size = 0;
     while(!empty(*queuep)) {
 	dp = dequeue_disk(queuep);
 
@@ -578,8 +583,10 @@ disklist_t *queuep;
 	    /* go ahead and do the disk as-is */
 	    insert_disk(&newq, dp, sort_by_priority_reversed);
 	else {
-	    if (free_space() > reserved_space) {
+	    if (reserved_space + est_full_size + sched(dp)->est_size
+		<= total_disksize) {
 		insert_disk(&newq, dp, sort_by_priority_reversed);
+		est_full_size += sched(dp)->est_size;
 	    }
 	    else if(sched(dp)->degr_level != -1) {
 		sched(dp)->level = sched(dp)->degr_level;
